Added Animate.css Added smooth scroll plugin in Checkout.js Added UI to Update the Customers Account with shipping and Payment Data -> needs backend work Polished the Final Thank You page

--- a/src/themes/default-procc/css/main.scss
+++ b/src/themes/default-procc/css/main.scss
@@ -24,6 +24,7 @@
 @import 'animations/animations';
 @import 'animations/transitions';
 
-// changes Vinod
+// changes ProCC
 @import 'base/cards';
 @import "custom";
+@import 'animations/animate.js.min';
