--- a/src/themes/default-procc/templates/index.basic.template.html
+++ b/src/themes/default-procc/templates/index.basic.template.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html data-vue-meta-server-rendered {{{ meta.inject().htmlAttrs.text() }}}>
-  <head><!-- index for default theme -->
+  <head><!-- index for default theme2 -->
   	{{{ meta.inject().title.text() }}}
 		{{{ meta.inject().meta.text() }}}
 		<meta name="generator" content="Vue Storefront">
