Added Discount option to Product Form and Store

--- a/src/themes/default-procc/css/custom.scss
+++ b/src/themes/default-procc/css/custom.scss
@@ -1,3 +1,15 @@
+.mx-auto {
+  margin-left: auto!important;
+  margin-right: auto!important;
+}
+.align-center {
+  text-align: center;
+  justify-content: center;
+}
+
+.discount {
+  color: #ec3c3b;
+}
 .product-listing {
   .product-image {
     .card {
