--- a/src/themes/default-procc/css/variables/_colors.scss
+++ b/src/themes/default-procc/css/variables/_colors.scss
@@ -10,7 +10,7 @@ $colors: (
   black: #000,
   white: #fff,
   //white-smoke: #f2f2f2,
-  white-smoke: #fff6fe, // Dan's whitesmoke :)
+  white-smoke: #fffffe, // Dan's whitesmoke :)
   gainsboro: #e0e0e0,
   silver: #bdbdbd,
   gray: #828282,
